asteria/core/tests/errors/elaboration_errors/constructor_term_does_not_inhabit_check_type.asteriacore
data Id (a : Type) where
   | MkId {b : Type} : Test$Id(b)
   ;;

x : forall (a : Type). Test$Id(a)
  = \{a} -> MkId(Test$Id(a);)
  ;;
